# BACKEND-PROJEKT-RUST

./: .gitignore
backend/: .env  Cargo.toml  docker-compose.yml
backend/migrations/: 20251128084121_create_todo_table.sql  20251128084237_create_todo_table.sql  20251202120043_create_users_table.sql  20251202120051_create_systems_table.sql  20251202120058_create_todos_table.sql  20251203091033_create_default_system_trigger.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs  system.rs  todo.rs  user.rs
backend/src/routes/: mod.rs  public.rs
backend/src/routes/auth/: mod.rs  signin.rs  signup.rs
backend/src/routes/system/: create.rs  delete.rs  mod.rs  read.rs  update.rs
backend/src/routes/todos/: create.rs  delete.rs  mod.rs  read.rs  update.rs
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/sign-in/: page.tsx
frontend/app/auth/sign-up/: page.tsx
frontend/app/system/: page.tsx
frontend/app/system/[sysId]/: page.tsx
