[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-cors = "0.7.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
dotenv = "0.15"
bcrypt = "0.17.1"
